added server, implimented grayscale, enabled css to work

--- a/successPage/success.html
+++ b/successPage/success.html
@@ -21,9 +21,9 @@
         </header>
 
         <main>
-            <button>
-                back
-            </button>
+            <form action="/" class="back" method="post">
+                <input type="submit" value="back">
+            </form>
         </main>
 
         <script src="./successPageScript.js" async defer></script>
