--- a/index.html
+++ b/index.html
@@ -1,37 +1,31 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>My Photo Album</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+
     <header>
         Grayscaler
     </header>
 
     <main>
-        <div class="uploadSection">
-            <input type="file" id="myFile" name="myFile" accept="image/x-png">
-            <button>submit</button>
-        </div>
+        <form action="/upload" class="uploadSection" enctype="multipart/form-data" method="post">
+            <div>PNG:<input type="file" id="myFile" name="myFile" accept="image/x-png" required></div>
+            <!--uploading only accepts png files-->
+            <input type="submit" value="upload">
+        </form>
         <div class="display">
+            <h1>display goes under here</h1>
         </div>
     </main>
 
-    <script src="./indexScript.js" async defer></script>
+    <script src="./index.js" async defer></script>
 </body>
 
 </html>
