--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <title>My Photo Album</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="/css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/index.css" />
 </head>
 
 <body>
+    <script src="./index.js" defer></script>
 
     <header>
         Grayscaler
@@ -23,9 +24,13 @@
         <div class="display">
             <h1>display goes under here</h1>
         </div>
+        <div class="imageGallery">
+
+        </div>
     </main>
 
-    <script src="./index.js" async defer></script>
+
+
 </body>
 
 </html>
