es linted and commit what if have. Stuck at just trying to get images to show on index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>display goes under here</h1>
         </div>
         <div class="imageGallery">
-
+            <img src="/grayscale/upload_b3d96eecccf9663c3a3f2317bbbb3149.png" alt="it don't work">
         </div>
     </main>
 
